[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verify-api"
version = "0.1.0"
description = "Backend API for RunProof verification UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "substr8-core>=0.2.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/verify_api"]
